*** 20010620_1 by db
- umm just a bit too severe on the IP hiding, showing 255.255.255.255
  for everything breaks vbots on tcm's.



*** 20010619_5 by leeh
- added NO_FAKE_GLINES, to stop spoofed glines
- heavy work on mo_gline(), not checking remote glines for invalid chars,
  or even for how many wildcard strings they have is *bad* so I added
  invalid_gline() and invalid_wildcard()

  the code is a bit messy.. someone should audit this


*** 20010619_4 by wcampbel
Added a blank line at the bottom to attempt to correct the permissions


*** 20010619_3 by wcampbel
Oops, reference to modules removed.


*** 20010619_2 by wcampbel
Updated the Release notes, and document the gdb bt procedure (backported from
Hyb7)


*** 20010619_1 by wcampbel
Updated the mkpasswd program (Adds an option to specify the length of a 
randomly generated salt)


*** 20010618_1 by db
- missing arg to #ifndef HIDE_SERVERS_IPS



*** 20010617_5 by db
- default to HIDE_SERVERS_IPS on



*** 20010617_4 by db
- upped patchlevel to 6.1b2



*** 20010617_3 by db
- backwards #ifndef's give me a headache, besides the rest of the code
  uses #ifdef HIDE_SERVERS IPS



*** 20010617_2 by greg
This morning on my way to coburg and with and archived copy of CVS source for
hybrid 6 taken last night at about midnight, I did the following. If I remember,
I'll check for updates to any files which I have audited for server IP leakage
when I get back, if not I'm not responsible for any changes made to the files
which I commit after last night. (I'll check again before we go release)

I did the following:
- s_misc.c	appears already audited, verified all get_client_name calls
- s_bsd.c	same as above, also corrected a few spacing errors to make our
		server messages a little cleaner
- s_auth.c	some report_error calls will leak ips, but if we do call this
		there should be a large enough amount of other ips which we're
		reporting an error for that the server one will go unnoticed,