@@ -1,1 +1,1 @@
-#define SERIALNUM "20010620_1"
+#define SERIALNUM "20010624_2"
